<resources>
    <string name="app_name">Filmoteka</string>
    <string name="m20.disclaimer">Картинки взяты с https://www.movieposters.com/</string>
    <string name="m20.btn_menu_night">Ночь/день</string>
    <string name="m20.btn_menu_home">Домой</string>
    <string name="m20.btn_menu_fav">Избранное</string>
    <string name="m20.btn_menu_later">Посмотреть позже</string>
    <string name="m20.btn_menu_casts">Подборки</string>
    <string name="m20.btn_menu_settings">Настройки</string>
    <string name="m20.btn_menu_share">Поделиться</string>
    <string name="m25.exit_alert">Закрыть приложение ?</string>
    <string name="m25.exit_dbl_click">Для выхода щелкните дважды.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="m38_menu_settings_title_text">Настройки</string>
    <string name="m38_radio_button_popular">Популярные</string>
    <string name="m38_radio_button_top_rated">Топ</string>
    <string name="m38_radio_button_upcoming">Скоро</string>
    <string name="m38_radio_button_playing">В кинотеатрах</string>
    <string name="m38_radio_group_header">Подборка на главном экране:</string>

    <string name="m41_network_error">Ошибка загрузки данный из сети.</string>

    <string name="m42_permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="m42_downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="m42_open">В галерею</string>

    <string name="m48_change_notification">Изменить время</string>
</resources>